[TIL/book] 죽을 때까지 코딩하며 사는 법 (~ 4-4. 순차적 논리 전개)

--- a/book/죽을_때까지_코딩하며_사는_법.md
+++ b/book/죽을_때까지_코딩하며_사는_법.md
@@ -453,3 +453,167 @@
 
 
 # 4장. 모닥불 개발자
+
+## 1. 코딩의 도
+
+### 소프트웨어 개발 패러다임
+
+---
+
+
+## 2. 시간
+
+### 주 20시간
+
+---
+
+- 로버트 C 마틴은 주 20시간을 자기 계발에 투자하라고 한다.
+- 매일 10시간 이상씩 회사일을 한다는 건, 하루에 개인 시간은 거의 없다고 봐야한다.
+
+### 근본적 문제
+
+---
+
+- 주 40시간 이상 근무하는 건, 회사나 개발자 양쪽이 손해를 보는 일
+  - 개발자는 자기 계빨이 힘드니까, '죽을 때까지 코딩' 하기 어려운 상황
+  - 회사는 금전적인 손해를 본다.
+    - 발전이 없는 개발자이지만, 시간이 지나면 연봉은 올려줘야 한다.
+    - 어느 순간 스스로가 발전이 없다는 것을 깨달은 개발자가 이직
+    - 인수인계하는 동안 일은 못할 것이고, 월급을 허비하게 된다.
+- 그냥 오래 앉아 있으면 많이 일을 할 것이라는 기대는 상당히 단순한 생각
+
+→ 인간은 기계가 아니다.
+
+- 보통 하루에 집중 가능한 시간: 4시간
+  - 하루에 코딩이 가능한 시간.
+  - 쉬고 다시하고 를 반복해야 한다.
+  - 집중할 때까지도 시간이 필요하다.
+  - 그래서 이래저래 하루에 필요한 업무 시간을 8시간쯤 으로.
+
+→ 오래 일해서 노동의 양을 늘릴 수 없다면 노동의 질을 늘리는 쪽으로 검토!
+
+- 지식 노동의 질 높이기: 두뇌가 최적화된 상태에 지식 노동을 하게 하는 것
+  - 충분한 휴식이 필요하다. → 야근이 좋지 않은 이유
+  - 소프트웨어 개발은 '마라톤' 이다.
+- 임백준 님: 소프트웨어의 진정한 성공을 원한다면, 주 40시간 이상 노동을 수행하지 말아야 한다.
+
+### 최악의 버그
+
+---
+
+- 저자는 그 경험 이후로는 안좋은 컨디션에서는 코딩을 하지 않는다.
+
+### 시간 확보
+
+---
+
+- 이처럼, 우리가 처한 상황은 어렵다.
+- 그럼에도 매일 자기 계발할 시간은 꼭 확보해야만 한다.
+- 그냥 흘러가는 대로 있다가는 어느 순간 농장의 칠면조가 될 것이다.
+
+- 시간 확보에 가장 좋은 방법
+  - 주 40시간 근무가 허용되는 회사 다니기
+  - 재택근무가 가능한 회사 다니기
+- 차선책
+  - 점심이나 저녁식사 시간 이후에 한 시간 정도 자기 계발 시간으로 쓰기
+    - 개인 컴퓨터를 들고 빈 회의실에 들어가서 공부하기
+  - 회사 분위기로 보아 코딩 연습 같은게 허용된다면 매일 적당한 시간에 30분 또는 1시간 쯤 코딩 연습을 하는 것도 괜찮다.
+  - 아니면 일찍 출근하기
+    - 매일 1시간 씩 일찍 출근해서 자기 계발을 하자.
+  - 출퇴근 시간에 자기계발하기
+    - 꾸준히 책을 보거나, 기술 블로그를 모바일로 보는 것
+
+- 중요한 건 매일매일 시간을 확보하는 것. 우리 목표는 스스로를 코딩 잘하는 사람으로 훈련해 나가는 것이기 때문이다.
+
+
+## 3. 습관적으로
+
+### 아프리카 속담
+
+---
+
+- 해가 뜨면 뛰어야 한다.
+- 원하는 어떤 결과를 만들어 내기 위해서 우리는 매일매일 노력해야 한다.
+- 우리의 삶은 어느 날 갑자기, 한번에 바뀌는 것이 아니라 하루 하루의 노력의 모여서 서서히 변화되어가는 것이기 때문이다.
+
+### 매일 해야 하는 연습
+
+---
+
+- <클린 코더> 에서 '품새' 라고 번역한 말은 원래 '코딩 카타' 라는 말.
+- 연습한 품새에 따라 저절로 몸이 움직이듯이, 별다른 노력 없이도 좋은 코드가 나오게 만드는 것이 '모닥불 개발자' 가 되려는 우리의 목표다.
+
+- 중요한 건, 매일해야 한다는 것.
+- 습관을 만들어야 우리 스스로를 바꿀 수 있다.
+- 코딩 연습만이 아니라 본인에게 필요한 스킬을 매일 연마할 때, 카타(품새)용어를 사용한다.
+
+### 습관 들이기
+
+---
+
+- 습관: 매일 같은 일을 반복하는 것
+  - 습관을 만들 때, 먼저 우리 감성을 설득하는 단계가 필요하다.
+
+→ 감성이 움직여야 우리가 뭔가를 꾸준히 할 수 있다.
+
+- 작심삼일 플로우: 마음을 먹으면, 먼저 우리의 '이성' 이 계획을 세운다.
+  - '감성' 을 설득하지 않아, 이성의 계획과는 관계없이 우리를 끌고 가게 된다.
+  - 결국 며칠을 버티다가 이성도 포기한다.
+
+- 습관: 감성을 설득하는 과정에 도움이 된다.
+  - 먼저 매일, 같은 장소에서 쉽게 쉽게 할 수 있는 과제를 정한다.
+  - 그리고 그 시간과 장소가 편해질 때까지 중단 없이 유지한다.
+  - 그럼, 그 시간대가 될 때, 그 장소가 기억나는 시점이 찾아온다.
+  - 그다음엔 도전과제를 점점 늘려간다.
+
+→ 우리는 먼 훗날 반드시 '모닥불 개발자' 가 되어 있을 것이다.
+
+### 대가들의 습관
+
+---
+
+- 파데레프스키(피아니스트): 하루를 연습하지 않으면 내가 알고, 이틀을 연습하지 않으면 평론가들이 알지, 사흘을 연습하지 않으면 관객들까지 알게 돼.
+
+- 모차르트: 28살에 손에 기형이 왔다. 너무 오래 연습하고 늘 펜을 쥐고 작곡하느라.
+  - 그가 남긴 악보를 필사하는 데만 30년이 걸리는 분량
+- 모차르트가 천재였던 건, 그렇게 태어났기 때문이 아니라 그렇게 살았기 때문.
+
+- 스티븐 킹(작가): 매일 아침 출근 전 2시간 30분 가량 글을 썼다.
+
+→ 시작은 스스로의 감성을 설득하는 것으로, 그 끝은 대가가 될 때까지 확대해 나가자.
+
+
+## 4. 순차적 논리 전개
+
+### 오른쪽 두뇌로 그림그리기
+
+---
+
+### L-모드
+
+---
+
+- 두뇌의 작동 방식
+  - R-모드: 비언어적, 비시간적, 공간적, 직관적, 총체적
+  - L-모드: 언어적, 시간적, 추상적, 논리적, 순차적
+    - 순차적: 생각을 서로 연계적으로 전개해 나가는데, 하나의 생각이 다음 생각을 낳게하여 집중적으로 결론을 만들어 낸다.
+
+    → 코딩흘 때 우리의 두뇌가 움직이는 방식
+
+### L-모드 특징
+
+---
+
+- L-모드는 R-모드에 비해 우선권이 있다.
+  - 언어: 사회 안에서 서로를 연결한다.
+    - 그러니 언어적 동작특성을 지니는 L-모드가 두뇌의 우선권을 지니고 선점해야 한다.
+  - L-모드는 실시간 처리를 한다. 말하다가 끊기지 않도록.
+  - 논리적, 순차적 특성을 가지는 것도 납득이 된다.
+
+→ 문제: L-모드에는 빈틈이 많다. 충분히 고민하고 결론을 내릴 여유가 없기 때문.
+
+### 이야기 짓기 오류
+
+---
+
+- 이야기 짓기 오류: 복잡한 현실을 지나치게 단순화시켜 받아들이기 편한 이야기로 바꿔버리는 인간의 생물학적 성향
