--- a/book/죽을_때까지_코딩하며_사는_법.md
+++ b/book/죽을_때까지_코딩하며_사는_법.md
@@ -617,3 +617,746 @@
 ---
 
 - 이야기 짓기 오류: 복잡한 현실을 지나치게 단순화시켜 받아들이기 편한 이야기로 바꿔버리는 인간의 생물학적 성향
+- L-모드의 문제점
+  - '지나치게 단순화시킨' 논리를 전개한다.
+    - 그래서 '이야기' 가 만들어지는 과정에 사실이 왜곡되는 것이다.
+  - 우리는 이런 빈틈을 만들어 내는 상황 속에서 코드를 만들고 있다.
+  - 논리의 전체적 흐름은 유지될지 모르지만, 사실을 지나치게 단순화시키기 때문에 세세한 부분은 오류를 만들기 쉽고 결과가 나올 때까지 논리를 추가 확장해 나가기 때문에, 결과물은 정리를 할 수 없이 꼬이게 된다.
+
+
+## 5. 마법수
+
+### 7 대 4
+
+---
+
+- 컴퓨터는 두 가지 기억장치를 가지고 있다.
+  - 하드디스크
+    - 데이터를 오래 저장할 때 사용한다.
+    - 사람의 장기기억 영역
+  - 램(RAM) 메모리
+    - 컴퓨터가 켜 있는 동안만 데이터를 저장하고 컴퓨터 운영에 필요한 데이터를 가지고 있는 역할.
+    - 사람의 단기기억 영역
+
+- 마법수: 인간의 단기 기억이 몇 개로 나눠져 있는지, 수용 가능 정보가 한 번에 몇 개씩인지 나타낸다. → 4
+  - 프레젠테이션 발표자에게 마법수는 중요하다.
+  - 스티브 잡스: 청중에게 무언가를 설명할 때 청중 머릿속에 마법수를 잘 관리해야 본인의 말을 듣고 이해할 수 있다.
+- 순차적 논리 전개로 만들어낸 코드는 밀러의 마법수를 금방 소진한다.
+
+### 코드와 마법수
+
+---
+
+- 코드 자체에 대한 고민이나 학습 없이 우리 본성이 이끄는 대로 코딩을 하다보면 이 같은 코드가 나오게 된다.
+
+### 클래스 지향 프로그래밍
+
+---
+
+- 우리는 어떤 상황이라도 L-모드에서 순차적 논리로 코딩하려 한다. → 객체지향 언어를 사용해도 순차적 논리를 따라 코딩한다.
+- 마법수를 급격하게 소진하게 만드는 구조, 이 코드는 유지 보수하기 엄청나게 힘든 코드
+- <객체지향의 사실과 오해> 조영호님: 객체지향은 클래스지향이 아니다.
+
+- TDD: 우리의 본성을 뛰어넘을 정도까지 패러다임을 이해하고 체화시켜 갈 길잡이.
+
+## 6. 저글링
+
+### 손 씻기
+
+---
+
+- 외과 의사가 손을 씻지 않으면 환자가 죽듯, TDD 를 쓰지 않으면 프로젝트는 실패하게 된다.
+- TDD: 유닛테스트를 먼저 넣고 그 다음 실제 구현 코드를 넣는 식으로 작업하는 개발 방식
+  - 로버트 C 마틴은 TDD 를 원초적인 안전장치로 여기고 있다.
+  - '순차적 논리 전개의 문제점' 이라는 화두를 놓고 볼 때 아주 정확한 지적이다.
+    - 함수를 만들 때마다 테스트를 만들어야 하므로 TDD 를 사용하면 순차적인 논리 전개 방식을 쓰기 힘들어진다. → 문제를 만들어내는 근본적인 고리가 끊어진다.
+  - '이야기 짓기 오류'가 만들어내는 문제점, 다시 말해서 상황을 단순화시키는 버릇도 극복할 수 있다.
+
+- <디스커버리 Go 언어> 염재현님: 사실 필자는 디버깅을 거의 하지 않습니다.
+
+  → TDD 를 진지하게 적용하는 개발자의 경우, 디버깅은 안 한다고까지 말할 수 있게 된다.
+
+### 테스트 주도 개발 정리
+
+---
+
+1. 빨강: 실패하는 작은 테스트를 작성한다. 처음에는 컴파일조차 되지 않을 수 있다.
+2. 초록: 빨리 테스트가 통과하게끔 만든다. 이를 위해 어떤 죄악을 저질러도 좋다.
+3. 리팩터링: 일단 테스트를 통과하게만 하는 와중에 생겨난 모든 중복을 제거한다.
+
+- 로버트 C 마틴 기준 이 한 사이클을 도는 데 10~60초가 걸린다고 한다.
+
+- <테스트 주도 개발> 마틴 파울러: 테스트 주도 개발 스타일로 작업하면 한 번에 딱 하나의 공만 공중에 띄우는 느낌이 들고, 그렇기 때문에 그 공에 충분히 집중할 수 있고 그 일을 정말 훌륭히 해낼 수 있다.
+  - 테스트가 순차적 논리에 비어있는 부분을 알려주고, 밀러의 마법수 소진을 막아주면, 머릿속은 복잡한 일을 단순하게 접근할 수 있게 된다.
+  - 머릿속에 넣어 놓고 있는 내용이 적어지니까 일의 진행도 빨라진다.
+
+
+## 7. 우뇌형 개발자
+
+### 전문가의 뇌
+
+---
+
+- 전문가: 해당 분야에서 탁월한 감각을 지닌 사람. 말로 표현하기 어려운 탁월한 직관을 가진 사람.
+
+  → 전문가적 식견, 직관력, 통찰은 R-모드에서 나오는 것
+
+### R-모드로 개발하기
+
+---
+
+- 설계자들은 대부분 우뇌형이고 시공 감각을 지향하는 사람들이다.
+
+- R-모드 사용
+  - 우리가 소프트웨어를 개발할 때 코딩만 있는 건 아니다.
+  - 전체적인 그림을 만들어 내는 식견도 필요하다.
+  - '짝 프로그래밍' 을 할 때 내비게이터가 R-모드를 사용한다.
+- 혼자 개발할 때는 모드 전환(context switch)이 필요해서 시간이 좀 더 걸리지만, L-모드와 R-모드를 번갈아 가며 쓴다. R-모드로 전체 구조를 파악하고 L-모드로 직접적인 코드를 넣는다.
+
+### UML로 말하기
+
+---
+
+- 결국 UML 은 문제점만 낳은 채, 본래의 목표였던 원활한 의사소통을 끝내는 이루지 못했다.
+
+### R-모드 사용 방법
+
+---
+
+- R-모드를 사용하려면 L-모드를 꺼야 한다.
+  - 산책, 샤워, 등산
+  - 에디슨: 낮잠
+- 우리의 두뇌는 하나의 작동 모드만 사용하게 되어 있다.
+
+### R-모드 코딩
+
+---
+
+- 함수형 프로그래밍은 논리의 순차적인 전개 자체에 제동을 걸었다.
+- 함수는 논리라고 보기보다는 어떤 필터와 같은 느낌이 강하다.
+- 변수라는 개념조차 없는 함수형 프로그래밍 언어: 얼랭
+
+- R-모드 활성: 우리가 전문가로서 코딩할 때 고민해야 할 지점.
+  - 만약 주력 언어가 패러다임을 지원하지 않더라도 패러다임의 원리를 좇는 코딩을 하자.
+  - 어떤 프로그래밍 언어를 사용하든, 변수는 최소화해야 한다.
+
+- 코드의 3가지 기능
+  - 구현한 목적에 맞게 실행 가능해야 한다.
+  - 유지보수가 가능해야 한다.
+  - 코드를 읽는 사람이 코드를 작성자가 뭘 하려고 했는지 이해하도록 해줘야 한다.
+
+
+## 8. 낯선 사람 효과
+
+### 메트칼프의 법칙
+
+---
+
+- 메트칼프의 법칙: 네트워크의 가치는 사용자 수의 제곱에 비례한다.
+  - 몇 년에 한 번씩 이직을 해라.
+  - 우리의 생존확률을 높여줄 수 있다.
+  - 약한 연결
+    - 가끔 한 번 연락하는 관계
+    - 만약 갑자기 이직을 해야 하는 경우, 전화해서 부탁할 수 있는 정도
+    - 잘 모르는 것이 있으면 살짝 물어볼 수도 있고, 조언을 구하기도 할 수 있는 사이
+
+- IT 기술 테마별로 다양한 컨퍼런스가 있는데, 이러한 모임에 참여하는 것도 도움이 된다.
+
+### 정수기 효과
+
+---
+
+- 약한 연결 네트워크는 비슷한 일을 하는 사람이다 보니 필요한 지식이나 정보도 비슷할 가망성이 높다.
+
+### 적응
+
+---
+
+- 새로운 네트워크에 가입하는 건(이직하는 건), 결국 새로운 환경에 적응해야 한다는 것
+  - 이 때 발생하는 학습효과가 또 상당하다.
+  - 이전 회사에서는 많이 사용하지 않았던 기술을 새로운 회사에서는 많이 사용하게 되고, 이전 회사에서는 중요하지 않았던 부분이 새로운 회사에서는 중요한 것이 되기도 한다.
+
+### 낯선 것을 익혀라
+
+---
+
+- <클린 코더> 로버트 C 마틴: 책, 기사, 블로그, 트윗을 읽어라. 콘퍼런스에 가라. 여러 모임에 참가하라. 스터디 그룹에 들어가라. 익숙한 영역을 벗어나 낯선 것을 익혀라.
+  - 우리 중 누구보다 많은 언어를 공부하고 전문적으로 사용했던 사람의 조언이니 귀담아들을 필요가 있다.
+  - 각 언어가 지향하는 패러다임을 이해하다 보면, '클래스 지향' 같은 함정에 빠지지 않고 '패러다임' 자체를 이해할 수 있다.
+
+- 얼랭: 변수 자체가 버그 유발 요소라고 한다. 함수형 프로그래밍 언어에서는 변수를 Side Effect 라 정의한다.
+
+### 바벨 전략
+
+---
+
+- 바벨 전략: 바벨에 바퀴가 2개 있는 것처럼, 2개의 생존전략을 확보해야 한다는 것
+  - 본인 커리어에 도움이 될 만한 제 2의 기술 스펙을 쌓아가자.
+  - 자기 주도적으로 생존 전략을 찾아내야 한다.
+- '블랙스완' 이 우리에게 도래하게 된다면, 현재 직장이 필요로 하는 기술만으로 생존하기는 어렵다.
+
+
+## 9. 독서의 중요성
+
+### 쌀독 긁기
+
+---
+
+- '모닥불 개발자' 로 살기 위해서 독서는 필수 항목에 속한다.
+- R-모드의 비시간적 특성
+  - 우리 머릿속에 있는 데이터를 모두 검색해서 결과를 만들거나,
+  - 자주 반복되는 패턴에 대해서는 직관적으로 반응한다.
+  - 너무 빠르거나 너무 느리기 때문에 시간의 흐름 속에서 쓰기 어렵다.
+
+- 하지만 검색할 데이터가 근본적으로 없으면 별다른 통찰력이 없는, 총체적이지도 않은 결과를 제공할 것이다.
+
+  → R-모드의 도움을 많이 받지 못하는 개발자가 된다.
+
+### 생각하지 않는 사람들
+
+---
+
+- 책을 읽지 않는 세대의 문제점: 생각하지 못함
+  - 구글링으로만 지식을 운영하게 되면 '자기 생각' 이 없어진다.
+
+- 인류가 깊은 생각을 하기 시작한 건, '띄어쓰기' 가 생기고 나서.
+
+- 독서: 우리의 생각을 깊게 하게 해주는 훈련도구
+- 책: 저자의 생각을 잘 정리해서 담는 매개체
+  - '낯선 생각' 을 가진 저자를 만나는 통로
+  - 우리가 아는 주제에 대한 책일지라도 다른 관점을 가지고 보기 때문에 우리에게 다른 시선을 제시해준다.
+
+### 장님 코끼리 만지기
+
+---
+
+- R-모드: 쌓여있는 지식 속에서 통찰을 제공한다.
+  - 총체적인 그림을 그려서 우리에게 보여준다.
+  - 책을 더 읽을수록 더 많은 장님이 코끼리를 만지는 효과가 있다.
+- 특정 주제에 대해 다양한 저자의 책을 읽는것은 정확히 같은 효과를 제공해준다.
+
+### 낯선 사람, 저자
+
+---
+
+- 르네상스가 인쇄술의 발전과 맞물리는 건 우연이 아니다.
+  - 책을 읽을 수 있는 사람이 많아졌기 때문에 인류 전체가 우물에서 빠져나올 수 있게 되었다.
+  - 우리는 책을 읽으면서 저자의 다른 견해를 접하기 때문에 스스로를 성장시킬 수 있다.
+  - 특히 우리가 우물 안으로 기어 들어가고 있을 때, 진지한 독서는 우리를 구원해 줄 무기가 된다.
+
+### 아이디어
+
+---
+
+- 우리가 독서를 하는 순간 우리는 L-모드에 있다.
+  - 책도 언어로 되어 있기 때문.
+- 하지만 잠깐씩 읽기를 멈추고 창밖 먼 산을 보거나, 차창 밖을 보면 R-모드로 전환된다.
+  - 이때 R-모드는 우리가 기존에 가지고 있는 지식에 지금 읽는 책의 내용을 섞어서 의견을 내놓는데, 이때 나오는 의견이 주옥같다.
+  - 책 여백에 메모를 많이 하자.
+
+
+## 10. 전문가로 살기
+
+### 한계 알기
+
+---
+
+- L-모드를 제어하고, R-모드에서 코딩하는 개발자라면, 이제 스스로의 한계에 대해서 이해할 때가 된 것이다.
+- 우리는 두뇌로 일하는 지식 노동자이기 때문에 자신의 두뇌가 가진 한계를 알고, 그걸 제어할 방법도 잘 알고 있어야 한다.
+
+### 옷차림이 같은 이유
+
+---
+
+- 마크 저커버그: 옷 고르는 에너디조 아껴서 일하겠다.
+- 오바마: 나는 내가 내려야 하는 결정사항을 될 수 있으면 줄이려고 노력한다.
+
+  → 정신 에너지를 아낀다.
+
+- 전문적인 지식 노동자라면 자기 두뇌의 정신 에너지를 아껴 스는 방법을 알고있어야 한다.
+
+### 운동화 신은 뇌
+
+---
+
+- 스트레스는 우리 뇌를 쪼그라들게 하고 부식시키고, 심지어 뇌 구조까지 손상시킨다.
+- 성인의 뇌세포는 개수가 점점 줄어든다.
+- 하지만 분명 재생한다. 뇌를 잘 사용하면 점점 더 많은 뇌세포를 쓸 수 있다.
+
+### 집중력 마나
+
+---
+
+- 집중력 마나
+  - 다 쓰고 나면 몇 시간 정도 집중이 필요없는 행동으로 마나를 충전해야 한다.
+  - 또한  차츰 사라지는 자원이라 있을 때 사용하지 않으면 사라진다.
+  - 근심, 주의 산만 또한 집중력 마나를 소비한다.
+  - 하룻밤 잘 자고 나면 집중력 마나가 가득 찬다.
+
+- 집중력 마나를 효율적으로 쓰려면 몰입이 필요하다.
+
+### 몰입
+
+---
+
+- 행동 기회(도전)와 행동 능력(기술)이 비례로 상승하게 되면 몰입이 유지된다.
+- 몰입감을 맛보려면 어떤 도전을 통해 성취감을 느끼면서, 기술이 함께 성장할 수 있는 일을 해야한다.
+
+- 행동 기회(도전)만 많을 경우: 불안 + 근심
+- 행동 능력(기술)만 많을 경우: 불안 + 권태
+
+→ 우리가 코딩하다가 불안, 근심, 권태를 느낀다면, 하는 프로젝트에서 빠져나오거나 좀 더 공부를 하거나 아니면 더 많은 일을 받아오자.
+
+### 뽀모도로(토마토) 시계
+
+---
+
+- 집중하는 시간을 1시간 반 이상 유지하면 마나가 더 빨리 없어진다.
+- 그러니 중간중간 몰입을 멈춰줘야 더 오래 집중해서 일할 수 있다.
+
+- 몰입: 시간 가는 줄 모르는 상태 → 외부 도움없이 몰입 상태를 멈출 수 없다.
+- 화이트 노이즈(잡음)가 집중에 도움된다.
+
+### 비디오 게임
+
+---
+
+- 집중력도 훈련으로 향상시킬 수 있다.
+- 집중을 방해하는 것: 스트레스, 인터럽트
+
+### 모닥불 개발자
+
+---
+
+- IT 기술 트렌드가 바뀌는 주기: 3년
+- 앞으로 죽을 때까지 기술 트렌드가 20번 가까이 바뀌게 될 전망이다. → 어떤 기술을 이야기하는 건 무의미해진다.
+
+- '생물학적' 특성 때문에 우리는 나쁜 코드를 만들도록 되어 있다.
+- 그러나 꾸준히 연습하면 좋은 코드를 만드는 습관을 가지게 될 수 있고, 전문가적으로 점점 더 성숙해 갈 수 있다.
+- 우리가 모닥불 개발자로 살아남을 수 있도록 도움이 되는 회사, 미래 IT 산업에 영향을 미칠만한 저력이 있는 회사는 좀 더 깊이 연관을 가지는게 좋다.
+
+  → 우리 스스로를 성장시키는 데 많이 도움이 될 것이다.
+
+### 요약
+
+---
+
+- 이건 마치 소에게 멍에가 필요한 것과 같은데요. 쟁기를 지고 밭을 가는 건 소의 본성이 아닙니다. 그러니 소가 밭을 잘 갈려면 멍에의 도움이 필요하죠.
+- 좋은 코드를 만들어내는 데 방해가 되는 우리 두뇌의 작동 방식들은 제거해 나가고, 자연스럽게 좋은 코드가 나오는 습관을 만들어 내야겠죠. 즉, 멍에가 필요 없을 만큼 스스로를 훈련시키는 과정이 필요합니다.
+- 매일 10시간 이상씩 회사 일을 한다는 건, 하루에 개인 시간은 거의 없다고 봐야겠죠. 우리 인간은 기계가 아닙니다. 따라서 오래 돌린다고 더 많은 결과가 나오지 않습니다.
+- 지식 노동의 질을 높이는 건 두뇌가 최적화된 상태에 지식 노동을 하게 하는 겁니다. 그래서 충분한 휴식이 필요합니다. 야근이 좋지 않은 이유는 여기에 있는데요.
+- 하루 8시간을 넘겨서 개발자에게 일을 시키는 건, 마라톤 주자에게 특정 구간에서 전력 질주하라고 주문하는 것과 같습니다. 중요한 건 매일매일 시간을 확보하는 겁니다. 우리 목표는 스스로를 코딩 잘하는 사람으로 훈련시켜나가는 것이기 때문입니다.
+- 연습한 품새에 따라 저절로 몸이 움직이듯이, 별다른 노력이 없이도 좋은 코드가 나오게 만드는 것이 '모닥불 개발자' 가 되려는 우리의 목표입니다.
+- 시작은 스스로의 감성을 설득하는 것으로 하고, 그 끝은 대가가 될 때까지 확대해 나가는 겁니다.
+- 코딩할 때 우리의 두뇌가 움직이는 방식이 이렇습니다. 원하는 결과가 나올 때까지 코드로 논리를 전개해나가죠. 이 어딘가에 맹점이 있어서 패러다임을 통해 제어가 필요했던 건데요. 그게 뭘까요?
+- 우리는 이런 빈틈을 만들어 내는 'L-모드' 에서 코드를 만들고 있습니다.
+- 논리의 전체적인 흐름은 유지될지 모르지만, 사실을 지나치게 단순화시키기 때문에 세세한 부분은 오류를 만들기 쉽고, 결과가 나올 때까지 논리를 추가 확장해 나가기 때문에 결과물은 정리를 할 수 없이 꼬이게 되는 거죠. 그런 다음 우리는 '화창한 날의 테스트' 로 마무리 합니다.
+- 순차적 논리 전개로 만들어낸 코드는 밀러의 마법수를 금방 소진합니다. 그만큼 복잡하기 때문이죠. 그래서 가독성이 현저하게 떨어지고 아무도 이해하지 못하는 코드가 되어 버립니다.
+- if문을 발견했습니다. 뭔가 조건이 있어야 하나 보군요. 그런데 그 안에 if문이 하나 더 보입니다. 그리고 하나 더 또 하나 더... 마법수 4는 소진되었습니다. 이제 더 이상 코드에 집중하기 힘듭니다. if문 깊이가 4개를 넘어가기 시작하면 우리는 각 if문의 조건을 기억하지 않고 코드를 읽기 시작합니다. 그럼 어느 순간 코드가 이해하기 힘들게 됩니다.
+- 우리는 매일 연습하는 과정에서 도움을 받을 누군가 또는 무언가가 필요합니다. 우리의 본성을 뛰어넘을 정도까지 패러다임을 이해하고 체화시켜갈 길잡이가 있어야 하는 거죠.
+- 마틴 파울러가 주의를 기울였던 건 TDD 를 할 때 정신상태입니다. 테스트가 순차적 논리에 비어 있는 부분을 알려주고, 밀러의 마법수 소진을 막아주면, 머릿속은 복잡한 일들을 단순하게 접근할 수 있게 됩니다.
+- 소프트웨어 개발을 위한 기법이나 툴은 은연 중에 L-모드를 제어하고 R-모드를 사용하기 좋도록 만들어져 왔습니다. 다만 우리의 접근 방식이 L-모드 방식이었기 때문에 본연의 성능을 발휘하지 못한 것 뿐이죠. 그 대표적인 예가 UML 입니다.
+- 그러니 그림을 그려야 하는 겁니다. 그런데 의사소통을 위해 그림을 그리려니 서로 아는 기호를 가지고 그림을 그려야 맞겠죠? 그래서 UML 이라는 표준안이 세상에 나오게 된 겁니다.
+- 켄트벡은 <테스트 주도 개발>에서 '샤워 방법론' 이라는 용어를 전해주고 있습니다. '데이브 웅가' 라는 사람의 주장이라고 하는데요. 키보드로 뭘 쳐야 할지 모르겠으면, 샤워하러 가는 겁니다. 생각날 때까지 샤워하고 있는 거죠.
+- 우리가 전문가로서 코딩을 할 때 고민해야 할 지점이 이 부분이라 생각합니다. 어떤 패러다임을 충실히 따르는 것 그리고 만약 주력 언어가 패러다임을 지원하지 않더라도 패러다임의 원리를 좇는 코딩을 하는 거죠.
+- 우리가 아주 오랜 시간 코딩을 해나간다면, 즉 '죽을 때까지 코딩' 하며 살아가게 된다면, L-모드 제어, R-모드 활용의 방법이 일종의 나침반이 되지 않을까 싶습니다.
+- 페이스북의 가치그 고평가 된 원인 중에 하나가 바로 여기에 있습니다. 인터넷은 그 시작점부터 정보의 융통을 위한 도구였는데요. 구글과 같은 검색 엔진은 너무 많아진 정보를 잘 정리해서 보여주는 기능이 있었다면 페이스북은 아는 사람 사이에서 정보를 획득해 낼 수 있는 기능이 있는 겁니다. 예를 들어서 백엔드 개발자라면 프런트엔드 개발에 관해 하나씩 배워나가는 거죠. 또한 임베디드 개발자라면 파이썬이나 고급 언어를 배우는 겁니다.
+- 독서는 우리의 생각을 깊게 하게 해주는 훈련도구입니다. 우리는 책을 읽으면서 저자의 다른 견해를 접하기 때문에 스스로를 성장시킬 수 있습니다. 우리가 이미 알고 있는 주제에 대해서 저자가 다른 생각을 갖는다면 그걸 이해해 보면서 스스로를 성장시킬 수 있고요.
+- 우리가 독서를 하는 순간 우리는 L-모드에 있습니다. 책도 언어로 되어 있으니까요. 하지만 잠깐씩 읽기를 멈추고 창밖 먼 산을 보거나, 차창 밖을 보면 R-모드로 전환됩니다. 그래서, 독서법을 다루는 책을 보며느 책에 메모하는 걸 권장합니다. 이건 직접 체험해봐야 합니다. 정말 놀라울 때가 많습니다.
+- L-모드를 제어하고, R-모드에서 코딩하는 개발자라면, 이제 스스로의 한계에 대해서 이해할 때가 된겁니다. 우리는 두뇌로 일하는 지식 노동자이기 때무넹 자신의 두뇌가 가진 한계를 알고, 그걸 제어할 방법도 잘 알고 있어야 합니다.
+- 지식 노동자라면, 오바마나 저커버그처럼 마나를 아껴서 사용해야 하고요. 지식 노동자들을 고용한 회사라면, 역시 지식 노동자들이 마나를 아껴서 쓸 수 있도록 업무 환경을 만들어 가야겠죠.
+- 그러니, 우리가 코딩을 하다가 불안, 근심, 권태를 느낀다면, 하는 프로젝트에서 빠져나오거나 좀 더 공부를 하거나 아니면 더 많은 일을 받아오면 되겠죠.
+
+
+# 5장. 모닥불 조직
+
+## 1. 로젠탈 효과
+
+### 조직문화
+
+---
+
+- 조직 내 침묵 현상: 상명하달식 조직이 억압적이며 좋지 않은 결과를 낳는다. 똑똑한 개인도 무능해진다.
+- 누군가에게는 내가 바로 프레임이 된다는 사실을 직시해야 한다.
+
+### 구원 투수, 그녀
+
+---
+
+- 사고의 자유를 만끽하고 자기 의견과 생각을 자유롭게 공유할 수 있는 곳에 있기
+- 자신에게 투자해주고 도전거리를 주는 사람과 있기
+- 똑똑한 사람과 일할 수 있는 곳에 있기
+- 아직 준비되지 않은 일을 할 수 있는 곳에 있기
+
+### 천재를 만드는 조직
+
+---
+
+- 조직의 목적: 평범한 사람이 비범한 일을 할 수 있도록 만드는것
+  - 구성원들이 가진 능력에 주목하고, 그 능력을 최대한 발휘하게 하자.
+  - 자유를 주고, 멘토와 본받을 사람을 주고, 책임을 주는 것.
+
+### 로젠탈 효과
+
+---
+
+- 로젠탈 효과: 누군가의 기대를 받는다는 것만으로 지능지수가 상승하는 효과를 얻는 것
+
+
+## 2. 멘토
+
+### 멘토가 필요해, 거울보기
+
+---
+
+- 멘토가 멘티를 가르칠 때, 멘티는 멘토의 목소리만이 아니라 표정, 눈빛, 뉘앙스 등 다양한 통로로 전해오는 정보를 받아들인다.
+- 멘티의 거울신경세포는 멘토의 머릿속을 시뮬레이션 하고, 학습 속도도 빠르고 의미 전달도 잘 될 것이다.
+- 멘티는 멘토를 '흡수' 한다.
+
+### 멘토가 하는 일
+
+---
+
+- 강력한 조언자: 당신에게 투자하는 사람과 당신에게 도전거리를 안겨주는 사람
+  - 그 사람을 위해 일하세요. 우리는 강력한 조언자가 필요합니다.
+  - 도전거리를 주고 학습하도록 유도하는 것 → 몰입 상태에 머물게 해주는 것
+  - 책임을 부여해주는 것 → 빠르게 성장할 수 있는 기회이다.
+- 막히는 게 있을 때, 그걸 풀어주는 사람이 옆에 있다는 건 엄청난 행운이다.
+
+### 책임이 하는 일, 가르치기
+
+---
+
+- 무언가를 배우는 가장 좋은 방법: 그것을 가르치는 것.
+
+### 모닥불 조직문화
+
+---
+
+- 자연스럽게 정보가 공유되고 서로에게 멘토가 되어준다.
+- 성장할 수 있는 환경이 조성되어 있어서 여기에 속한 구성원은 빠른 성장을 보일 것이다.
+
+
+## 3. 대중의 지혜
+
+### 농부들의 내기
+
+---
+
+- 대중의 지혜: 대중이 그 지혜를 모을 수 있을 때, 천재적인 결과를 만들어낸다.
+
+### 보이지 않는 천재
+
+---
+
+- 대중의 지혜를 갖추게 해주는 4가지 요소
+  - 의견의 다양성: 다양한 개개인 만의 정보를 가질 것
+  - 독립성: 각자 독립적으로 의견을 가질 것
+  - 분권화: 개개인의 개별적 지식에 의존할 것
+  - 통합의 메커니즘: 각자의 의견을 집단 결정으로 전환시키는 구조를 가질 것
+
+### 지식의 착각
+
+---
+
+- 인간은 무언가에 집중할 때 그 외 정보는 받아들이지 않는 경향이 있다.
+- 전문가는 오랜 기간 한 분야에 집중하고 있는 사람 → '대중의 지혜' 가 중요하다.
+
+### 퍼즐 풀기
+
+---
+
+- 대중의 지혜를 구축하기 위해서는 구성원 개개인에게 독립성을 보장하고 '권한' 을 이양하는 과정이 필요하다.
+
+### Look Right
+
+---
+
+- 무의식적으로 테일러주의식 행동을 하게 되는 곳곳마다 'LOOK RIGHT' 라고 적어놔야 한다.
+
+
+## 4. 오른쪽을 보시오
+
+### 현실 왜곡
+
+---
+
+- 확증편향: 우리가 어떤 사실을 받아들일 때, 우리가 가진 신념을 지지해주는 증거만을 받아들이는 성향.
+
+### 전문가의 문제
+
+---
+
+- 자신들이 무엇을 알지 못하는지를 모른다. 설상가상으로, 자신들의 지식수준이 높다고 착각하기까지 한다.
+- 코딩 전문가들에게 개발 기간을 물어보는데, 그 말을 믿는 관리자가 바보다.
+
+### MBO(Management By Objectives)
+
+---
+
+- 조직이 목표를 빠르게 처리하려면 조직 구성원에게는 적당한 '여유'가 필요하다.
+  - '여유' 를 '슬랙' 이라 부른다.
+
+- MBO: 목표 관리
+  - 작년 대비 120% 매출 완성 → '비전이 가득한 눈빛' 으로 말할 만한 목표가 아니다.
+- 피터 드러커가 말하는 목표: '비전이 가득한 눈빛' 으로 말할 수 있는 목표
+
+### 식스시그마, 변명
+
+---
+
+- 변명: 무시, 왜곡 외 또 하나의 회피 유형.
+  - 분명, 익숙하지 않아서, 안 한 것.
+  - 그런데 그런 말을 하기는 싫으니까 "비효율적이에요." 이렇게 변명하는 것이다.
+- 조직문화는 변화에 대해서 그리 열려 있는 편이 아니다.
+
+### 10배 법칙
+
+---
+
+- 예전보다 10퍼센트 더 나은 결과를 얻고 싶다면 당연히 과거의 수단이나 증명된 방법을 선택하면 된다.
+- 그러나 10배 더 나은 것을 만들고 싶다면 다른 사람들이 시작한 것에서 출발하면 안된다.
+- 유일한 방법은 기존의 전제들을 버리고 모든 것에 새로운 방식으로 접근하는 것이다.
+
+
+## 5. 목표에 대해서
+
+### 허를 찌르는 질문
+
+---
+
+- 제약 이론: 전체 공정의 생산속도는 가장 늦은 공정의 생산속도를 넘을 수 없다.
+
+### 간트 차트에 대해
+
+---
+
+- 간트 차트대로 공정을 시간 안에 맞추다보면 소프트웨어의 질을 포기하게 된다.
+
+### 모닥불 조직되기
+
+---
+
+- 애자일은 '좋은 소프트웨어 만들기' 라는 목표를 정조준하고 있는 개발 방식이다.
+
+
+## 6. 애자일
+
+### 정방폭포, 애자일의 시작, 소프트웨어 개발 목표
+
+---
+
+- 우리는 우리가 아는 것 이상으로는 상상할 수 없다.
+- 고객이 최대한 만족하게 하려면, 변경이 가능하도록 동작하는 소프트웨어를 최대한 많이 보여줘야 한다.
+- 애자일 고프트웨어 개발 선언: '작동하는 소프트웨어' 로 '고객과의 협력'을 하며 '변화애 대응하겠다'
+
+### 애자일과 제약 이론, 개선 방법
+
+---
+
+- 익스트림 프로그래밍: 프로세스의 가치, 원칙, 실천 방법을 중요하게 여긴다.
+
+
+## 7. 모닥불 조직
+
+- 만약 모닥불 기업에 합류하는 행운을 얻게 된다면, 모닥불 개발자로 성장하는 데 많은 도움이 될 것이다.
+
+### 요약
+
+---
+
+- 결국 환경이 문제이고, 환경을 그렇게 만든 경영진의 문제라는 겁니다.
+- "평범한 사람이 비범한 일을 할 수 있도록 만드는 것" 이 곧 조직의 목적이다.
+- 천재들로 회사를 움직여 가기엔 천재의 공급이 너무 부족합니다.
+- 자유를 주고, 멘토와 본받을 사람을 주고, 책임을 주는 것, 바로 그 사람이 가진 능력을 최대한 발휘하게 하는 방법이 아닐까요.
+- 누군가의 기대를 받는다는 것만으로 지능지수가 상승하는 효과를 얻는 것, 이것이 로젠탈 효과입니다.
+- 조직문화 속에서 '기대감' 이 흐르고 있다면, 어떻게 될까요? 서로를 존중하고 서로에게 기대하는 과정에서 모두의 IQ 가 상승하는 분위기가 되겠죠.
+- 이해하기 힘든 것을 알아야 할 때, 뭔가 부족함이 있는데 그게 무언지 모를 때, 갈팡질팡 방향성을 잃었을 때, " 아! 누가 좀 도와주면 좋겠다" 라고 혼잣말을 하게 됩니다.
+- 멘티의 머릿속 거울신경세포는 멘토의 머릿속을 시뮬레이션하겠죠. 그럼 학습 속도도 빠르고 의미 전달도 잘 될 겁니다. 한마디로 멘티는 멘토를 '흡수' 하는 거죠.
+- 거울신경세포는 멘토의 상태를 그대로 복사할 수 있는 메커니즘을 제공해주기 때문에, 멘티가 멘토의 지식을 토대로 문화를 더 확장해 나갈 수 있겠죠.
+- 테일러가 과학적 관리 기법을 만들었던 100년 전에는 이런 방식의 조직 통제가 효율적이었을 수도 있습니다. 당시 주류산업은 지식 산업과는 거리가 멀었거든요.
+- 전문가는 오랜 기간 한 분야에 집중하고 있는 사람입니다. 1만 시간 법칙을 따른다면, 십 년쯤 농구공만 보고 있는 사람이죠. 따라서 일반인이라면 쉽게 발견할 고릴라이지만, 전문가의 경우는 발견하지 못할 수 있습니다.
+- '대중의 지혜' 를 사용하려면, 의견의 다양성, 독립성이 전제되어야 하는 겁니다. 소수의 전문가만 모여서 판단하면, '비틀즈' 를 놓칠 수 있거든요. 대중의 지혜로 시스템을 전환하다 보면, 소프트웨어 개발 같은 업무는 더 효율이 높아지게 될 겁니다.
+- 진실을 말하자면, 10줄짜리 코드를 짜거나 옛날 코드를 그대로 복사하는 경우가 아니라면 프로젝트가 실제로 얼마나 걸릴지 예측하는 일은 불가능하다.
+- 조직이 목표를 빠르게 처리하려면 조직 구성원들에게는 적당한 '이유' 가 필요한데요. 톰 드마르코는 여기에 필요한 '여유' 를 '슬랙' 이라 불렀습니다. 그런데 그 결과가 연봉으로 직결되어 버리면, 나름대로 살길을 찾아야 합니다. 팀장님과 친하게 지내거나 눈에 띄는 프로젝트 성과를 모두 자기가 한 것처럼 포장하거나...
+- 지난 50년간 발전해온 소프트웨어 공학의 마지막 지점에 애자일이 있습니다. 애자일은 '좋은 소프트웨어 만들기' 라는 목표를 정조준하고 있는 개발 방식입니다.
+- 고객에게 뭘 원하냐고 물었다면, 아마 고객들은 더 좋고, 더 빠르고, 더 싼 MS-DOS 컴퓨터를 원한다고 했을것이다. 그러나 스티브 잡스 본인은 매킨토시를 만들었다는 거죠.
+- 동작하는 소프트웨어를 보기 전까지, 고객은 스스로 원하는 것이 뭔지 모릅니다.
+
+
+# 6장. 죽을 때까지 코딩하기
+
+## 1. 두 개의 마음
+
+### 뇌 가소성
+
+---
+
+- 뇌 가소성: 두뇌가 변화함을 나타내는 용어
+  - 변하는 정도가 아니라 매우 잘 변한다.
+  - 대대적으로 변한다.
+- 뇌는 스스로 변화하며, 사람마다 다른 개인적 삶의 과정에서 변화한다. → 우리 삶이 우리 뇌를 변화시켜간다.
+
+- 오늘 하루 삶의 결과는 우리의 뇌를 바꾸고, 우리는 바뀐 뇌로 내일을 살게 된다.
+  - 오늘 하루는 내일의 나를 만드는 과정이다.
+  - 그러니 하루하루를 허투루 보낼 수 없다.
+
+- 해가 뜨면 뛰어야 하지만, 매일 뛴다는 건 쉬운 일이 아니다. → 습관이 필요하다. 뛰는 걸 자연스럽게 만들자.
+
+→ 우리의 마음가짐에 따라 우리 뇌 변화에 차이가 생긴다.
+
+### 마음가짐
+
+---
+
+- 마인드 세트: 인간의 마음가짐
+  - 고착 마인드 세트: 성장 가능성에 한계를 정하는 것
+    - 노력이나 도전에 큰 의미를 두지 않는다.
+    - 이런 사람들이 노력을 믿지 않는 정도를 보면 정말 놀랍다.
+  - 성장 마인드 세트: 성장 가능성에 한계를 두지 않는다.
+    - 오늘보다 내일, 더 성장해 나갈 수 있다고 믿는 것
+    - 노력과 도전이 많은 의미를 지닌다.
+
+- 생각이 뇌 구조를 바꾼다는 사실만큼은 이제 분명하다.
+  - 우리가 성장 마인드 세트를 가질 경우, 우리 뇌는 성장 마인드 세트에 맞게 바뀌어갈 것이다.
+  - 도전과 노력에 더 열린 자세를 갖는 사람이 된다.
+  - 몰입을 유지하고 있는 사람은 행복하게 살 수 있다.
+
+### 마음가짐의 결과
+
+---
+
+- 성장 마인드 세트를 가진 아이가 1년 만에 전국 상위 5%에 들 수 있다는 것
+
+  → 대부분이 고착 마인드 세트를 갖고 있다는 증거
+
+- 칭찬의 대상은 '과정' 이 되어야 한다.
+  - '결과' 를 칭찬하면 고착 마인드 세트를 갖게 되고,
+  - 그런 사람은 도전을 피하는 특성을 가진다.
+
+### 식민지와 고착 마인드 세트, 테일러주의와 고착 마인드 세트
+
+---
+
+- '비전이 가득한 눈빛' 을 가진 사람을 보면, 아직 세상 물정 모르는 아이로 취급한다.
+- 지속적으로 공부하고 도전하고 노력하며 살아야 하는 시대가 되었다.
+
+
+## 2. 머니볼
+
+### 모닥불 조직, 머니볼에서 찾은 예, 우리의 팀
+
+---
+
+### 스크럼
+
+---
+
+- 스크럼에는 스프린트라고 부르는 개발 주기가 있다.
+- 스프린트: 일정을 2주 단위로 끊어서 진행하는 것. 스프린트 내에서는 요구 사항의 변화를 막습니다.
+  - 흔들리지 않는 목표를 2주간 가질 수 있게 되는 것이다.
+
+- 데일리 스크럼: 병목구간을 해결하기 위한 스탠드 업 미팅. 한 일, 할 일, 방해요소를 이야기 하는 자리
+
+### 브룩스의 법칙
+
+---
+
+- 사람을 더 투입하면 그 사람은 바로 일할 수 없다. 적응할 시간이 필요하다.
+
+### 피할 수 없는 이론
+
+---
+
+- 인원 충원보다 확실한 개선 방법: 프로젝트의 목표를 명확히 하고 병목구간을 찾아내고 이를 해소하는 방법.
+
+### 제대로 만들기
+
+---
+
+- 소프트웨어를 제대로 만들려면 적정 수준의 지식과 기술을 겸비해야 한다.
+  - 하지만 대다수의 젊은 프로그래머는 이 수준에 도달하지 못했다.
+- 또한, 사고력과 통찰력을 갖춰야 한다.
+  - 하지만 대다수의 프로그래머는 시간을 들여 이러한 능력을 개발하지 않는다.
+- 어느정도의 훈련과 헌신이 필요하다.
+  - 대다수의 프로그래머는 훈련과 헌신이 필요하리라는 생각조차 하지 않는다.
+- 소프트웨어를 올바르게 만들려면 무엇보다도 기술을 향한 열정, 전문가가 되려는 열망이 필수다.
+
+- 모닥불 개발자: 제대로 된 코드를 만드는 개발자
+- '모닥불 조직' 이 아니라면 '모닥불 개발자' 는 떠나려고 할 것이다.
+- 그 문화 안에 있기만 해도 스스로 발전해 나갈 수 있다는 확신을 주는 조직이 있다면, 모닥불 개발자가 그 회사를 떠나가지 않게 될 것이다.
+
+
+## 3. 새로운 미래가 온다
+
+### 우리는 어디에 있을까요?, 비전의 역할
+
+---
+
+- 랭리: 미 육군성에서 5만 달러를 지원받았고, 하버드 학위가 있으며 스미스소니언에서 일했기 때문에 학술적인 인맥도 막강했던, 비행기 발명 프로젝트를 진행했던 사람.
+- 자전거 수리공을 하며 꿈을 키웠던 라이트 형제가 먼저 비행기를 발명했다.
+
+- 비전이 엄청난 일을 해내는 이유
+  - 비전이 변연계에 심어지면, 뇌의 다른 부분을 움직여서 그 일을 하게 만들어 간다.
+  - 변연계는 신뢰와 충성심을 담당하기 때문에,
+  - 우리 마음을 송두리째 쏟아붓는 열정으로 나타나게 된다.
+
+### 변연계 역할, 새로운 미래가 온다
+
+---
+
+- '모닥불 개발자' 는 우뇌형 개발자이다.
+- 우뇌형 인재들은 '창작', '공감' 이런 걸 잘하는 인재.
+
+
+## 4. 죽을 때까지 코딩하기
+
+- 우리만 준비되면, 죽을 때까지 코딩할 수 있다.
+- 먼저, 자기계발의 습관을 가져야 한다.
+- L-모드 코딩은 R-모드로 전환해야 한다.
+- 살아남는 모닥불 기업들이 어떤 비전을 제시하는지, 눈여겨봐야 한다.
+  - 모닥불 개발자로 살아남는다면, 언젠가는 꼭 그 영향을 받게 될 테니.
+- 인간의 뇌는 가소성이 있어서, 죽을 때까지 변화하고 바뀐다.
+  - 선생님은 어째서 아직도 연습을 계속하시나요? → 아직도 발전하기 때문이라네.
+
+- 이제 우리 자신의 마음가짐만 바꾸면 된다. 성장 마인드 세트를 가지고, 스스로를 돌아보면, 이 재미있는 일을 죽을 때까지 할 수 있는, 가능성을 볼 수 있을 것이다.
+
+### 요약
+
+---
+
+- 오늘 하루 삶의 결과는 우리의 뇌를 바꾸고, 우리는 바뀐 뇌로 내일을 살게 되는 거죠. 그래서, 오늘 하루는 내일의 나를 만드는 과정이라 말할 수 있습니다.
+- 칙센트미하이는 도전과 학습이 성취와 함께 지속될 때 '몰입' 에 이른다는 것을 보여주었습니다.
+- 유아기부터 사회에 구성원이 될 때까지 우리는 고착 마인드 세트 속에서 살아가고 있습니다. 따라서, 노력이나 도전을 높이 평가하는 말을 들으면 크게 감흥이 오지 않습니다.
+- 팀이 승리를 하기 위해 필요한 건, 유능한 선수가 아닙니다. 팀이 승리하기 위해 필요한 능력을 가진 선수입니다.
+- 빌리 빈에게 돈이 별로 없었던 것처럼, 우리에게는 개발자 인력이 부족합니다. 그러니 빌리 빈처럼 다른 방법을 찾아내야 합니다.
+- 우리의 목표는 '자기가 뭘 원하는지 모르는 고객이 원하는 걸 이해하고 가치를 충족' 하게 하는 겁니다. 하지만 고객이 뭘 원하는지 모르기 때문에 요구사항은 지속적으로 변화할 것이고, 이를 개발 목표로 삼아서, 병목을 찾는 구도를 만들기는 힘듭니다. 그래서, 스프린트가 필요합니다.
+- 사람을 더 투입하면 그 사람은 바로 일할 수 없습니다. 적응할 시간이 필요합니다. 요구사항이 무엇이고, 어떤 기술을 써야 하고, 그 팀에서 어떤 식으로 작업을 지행하고 있었는지 먼저 알아야 하니까요.
+- 기업은 그렇다 해도, 개인은 20~30년만 살고 죽을 수는 없는 노릇입니다. 심지어 평균 수명이 너무 많이 늘고 있습니다. 즉, 기업의 생리에 맞춰서 우리 인생을 살 만큼 인생이 짧지 않은 거죠. 그럼 스스로 생존 방법을 모색해야 합니다.
+- 라이트 형제는 비행기를 발명하면 세계 역사의 흐름을 바꿀 수 있다는 비전을 가지고 일을 했지만, 랭리는 단순히 돈 벌려고 그 일을 했다는 겁니다. 그런데, 변화된 환경에 적응하기 힘들었던 공룡들에게 빙하기가 찾아왔듯이, '하이 컨셉' 시대가 도래하고 있습니다.
+- 아름다움과 초월성 같은 것을 소비자들이 추구하는 시대가 되었습니다. 그러니, 이를 제품에 담아낼 수 있는 기업이 경쟁력과 생존력 있게 되겠죠. 다니엘 핑크는 이런 시대를 '하이 컨셉' 시대라고 이야기 했습니다.
+- 아이폰이 우리나라에 들어온 후 사태는 알 겁니다. 우리나라 휴대폰 제조 대기업 3사는 모두 골로 갈 뻔했습니다. 지금 승승장구한다고 말하는 그 회사도 사실, 안드로이드 아니었으면, 큰일날 뻔했죠.
+- 우리나라 소프트웨어 개발 조직들은 산업화 시대에 공장을 운영하듯 운영되어 왔습니다. 그러다 보니, 개발자들이 코드에 대한 열정을 가지는 건, 회사 입장에서는 거추장스러운 것이었고요.
+- 우리는 모닥불 개발자가 되어야 합니다. 죽을 때까지 코딩할 만한 시대가 열리고 있으니 우리만 준비되면, 죽을 때까지 코딩할 수 있을테니까요.
+- 하이 컨셉 시대에서 소프트웨어 개발은 지금보다 더 힘들어질 전망입니다. 창조와 공감이 필요한 소프트웨어가 되어야 하기 때문인데요. 결국은 자기가 뭘 원하는지 모르는 고객들이 뭘 원하는지 알게 만들고, 자기 가치를 충족할 수 있도록 이끄는 프로세스가 보편화될 겁니다.
+- 인간의 뇌는 가소성이 있습니다. 죽을 때까지 변화하고 바뀝니다.
+
+
+## 에필로그
+
+- '삶이 우리에게 기대하는 것', 이는 비전이 아닐까 싶다.
+- 석공이 '비전이 가득한 눈빛' 을 가질 수 있었던건, 삶이 자신에게 기대하는 것이 무엇인지 알았기 때문이다.
+- 스티브 잡스는 "남은 일생 동안 아이들에게 설탕물이나 팔 건가요. 아니면 세상을 바꿀 기회를 붙잡고 싶은가요?" 라고 말했고, 이 말속에서 비전을 느낀 존 스컬리는 펩시 사장 자리를 버리고 벤처기업 애플의 전문 경영인으로 참여했다.
+
+- 테일러주의가 가진 가장 큰 단점: 구성원들의 비전을 제거한다. 원천적으로 '생각' 을 하지 말라고 하니까.
+- 우리의 삶에 의미가 있으려면, 우리는 우리 스스로 비전을 가져야 한다.
+
+- 개발자로서 갖는 비전은 행복과 열정을 가져다 줄 수 있다. 우리가 직업으로 삼고 있는 코딩은 정말 재미있는 일이기 때문이다.
+- 그러니 지속적으로 노력하고 비전을 향해 달려갈 수 있다.
+- 당신보다 재능이 있는 개발자가 수천 명 있다는 사실에 기죽지 말라. 당신에게 열정이 있는 데 재능이 무슨 필요란 말인가?
+
+- 기죽을 필요도 없다. 내일의 우리는 오늘보다 더 나은 사람이 될 것이기 때문이다.
+- 미래를 예측하는 가장 좋은 방법은 미래를 만드는 것이다.
+
+
+- [Notion link](https://www.notion.so/9ca213475f844e0fb5cde6609b20ff25)
