--- a/book/마스터링_이더리움.md
+++ b/book/마스터링_이더리움.md
@@ -1,6 +1,8 @@
 ## 마스터링 이더리움 - 스마트 컨트랙트 및 댑 구축하기
 
 1. [이더리움이란 무엇인가](https://github.com/kyh1126/TIL/blob/main/book/%EB%A7%88%EC%8A%A4%ED%84%B0%EB%A7%81_%EC%9D%B4%EB%8D%94%EB%A6%AC%EC%9B%80/1_%EC%9D%B4%EB%8D%94%EB%A6%AC%EC%9B%80%EC%9D%B4%EB%9E%80_%EB%AC%B4%EC%97%87%EC%9D%B8%EA%B0%80.md)
+2. [이더리움 기초](https://github.com/kyh1126/TIL/blob/main/book/%EB%A7%88%EC%8A%A4%ED%84%B0%EB%A7%81_%EC%9D%B4%EB%8D%94%EB%A6%AC%EC%9B%80/2_%EC%9D%B4%EB%8D%94%EB%A6%AC%EC%9B%80_%EA%B8%B0%EC%B4%88.md)
+3. [이더리움 클라이언트](https://github.com/kyh1126/TIL/blob/main/book/%EB%A7%88%EC%8A%A4%ED%84%B0%EB%A7%81_%EC%9D%B4%EB%8D%94%EB%A6%AC%EC%9B%80/3_%EC%9D%B4%EB%8D%94%EB%A6%AC%EC%9B%80_%ED%81%B4%EB%9D%BC%EC%9D%B4%EC%96%B8%ED%8A%B8.md)
 
 
 - [Notion link](https://www.notion.so/bd536cd741794724bc34feccc38142ec)
