[TIL/book] 마스터링 이더리움 (~ Chapter 4. 암호학) - 이미지 추가

--- a/book/마스터링_이더리움/4_암호학.md
+++ b/book/마스터링_이더리움/4_암호학.md
@@ -92,7 +92,7 @@
 - K[공개키] = k[개인키] * G[생성자점: 타원곡선(secp256k1)위의 임의의 점]
 - *: 특수 타원 곡선 곱하기
 
-    ![Chapter%204%20%E1%84%8B%E1%85%A1%E1%86%B7%E1%84%92%E1%85%A9%E1%84%92%E1%85%A1%E1%86%A8%20a18f179af0f54dee9a2abf676aa06a80/Untitled.png](Chapter%204%20%E1%84%8B%E1%85%A1%E1%86%B7%E1%84%92%E1%85%A9%E1%84%92%E1%85%A1%E1%86%A8%20a18f179af0f54dee9a2abf676aa06a80/Untitled.png)
+    ![Untitled 8.png](../image/masteringethereum/Untitled%208.png)
 
 - 타원 곡선 곱셈 = 단방향 함수 유형
 - 한방향[곱하기]는 수행하기 쉽고 반대방향[나누기]는 수행하기가 쉽지 않다.
@@ -101,7 +101,7 @@
 
 ---
 
-![Chapter%204%20%E1%84%8B%E1%85%A1%E1%86%B7%E1%84%92%E1%85%A9%E1%84%92%E1%85%A1%E1%86%A8%20a18f179af0f54dee9a2abf676aa06a80/Untitled%201.png](Chapter%204%20%E1%84%8B%E1%85%A1%E1%86%B7%E1%84%92%E1%85%A9%E1%84%92%E1%85%A1%E1%86%A8%20a18f179af0f54dee9a2abf676aa06a80/Untitled%201.png)
+![Untitled 9.png](../image/masteringethereum/Untitled%209.png)
 
 미국 표준기술연구소[NIST]에서 제정한 secp256k1 타원 곡선
 
@@ -117,7 +117,7 @@
     (x ** 3 + 7 - y**2) % p
     ```
 
-    ![Chapter%204%20%E1%84%8B%E1%85%A1%E1%86%B7%E1%84%92%E1%85%A9%E1%84%92%E1%85%A1%E1%86%A8%20a18f179af0f54dee9a2abf676aa06a80/Untitled%202.png](Chapter%204%20%E1%84%8B%E1%85%A1%E1%86%B7%E1%84%92%E1%85%A9%E1%84%92%E1%85%A1%E1%86%A8%20a18f179af0f54dee9a2abf676aa06a80/Untitled%202.png)
+  ![Untitled 10.png](../image/masteringethereum/Untitled%2010.png)
 
 - 생성자점 G는 secp256k1 표준의 일부로 지정
 - G는 모든 이더리움 사용자에 대해 항상 동일, 따라서 G와 개인키 k를 곱한 결과는 항상 공개키 K로 동일
