--- a/nosql/dynamodb/_2_작동_방식.md
+++ b/nosql/dynamodb/_2_작동_방식.md
@@ -537,7 +537,7 @@ DynamoDB 는 파티션 수와 상관없이, 항목을 테이블의 파티션에 
 
     - *Pets* 테이블에서 동일한 항목을 읽으려면, DynamoDB 는 *Dog* 의 해시 값을 계산하여, 이 항목이 저장될 파티션을 찾아낸다. 그런 다음 DynamoDB 가 *Fido* 를 찾을 때까지 정렬 키 속성 값을 검색한다.
     - *AnimalType* 이 *Dog* 인 항목을 모두 읽으려면, 정렬 키 조건을 지정하지 않고 `Query` 기능을 실행한다. 기본적으로 항목은 정렬 순서대로 (정렬 키 기준 오름차순) 반환된다. 선택 사항으로, 내림차순을 요청할 수 있다.
-    - *Dog* 항목들의 일부만 쿼리하려면, 정렬 키에 조건을 적용할 수 있다. (ex > *Name* 이 **`A`~`K` 범위 문자로 시작하는 *Dog* 항목)
+    - *Dog* 항목들의 일부만 쿼리하려면, 정렬 키에 조건을 적용할 수 있다. (ex > *Name* 이 `A`~`K` 범위 문자로 시작하는 *Dog* 항목)
 
 DynamoDB 테이블의 경우, 파티션 키 당 고유 정렬 키의 수는 제한이 없다. 만약 *Pets* 테이블에 *Dog* 항목 수십억개를 저장해야 하는 경우, DynamoDB 은 자동으로 요구 사항을 처리할 수 있는 충분한 스토리지를 할당한다.
 
