--- a/book/마스터링_이더리움/2_이더리움_기초.md
+++ b/book/마스터링_이더리움/2_이더리움_기초.md
@@ -63,7 +63,7 @@
     - 메타마스크 또는 컴퓨터에 문제가 생기면, 이 단어들을 호환되는 지갑에서 사용할 수 있다.
     - 복구에는 패스워드가 필요하지 않으며 12개의 단어로 충분하다.
 
-![Untitled.png](../image/masteringethereum/Untitled.png)
+![Untitled.png](masteringethereum/Untitled.png)
 
 ### 네트워크 바꾸기
 
@@ -98,7 +98,7 @@
 - 지갑에 테스트넷 이더를 넣어보자. 롭스텐 테스트 네트워크 선택.
 - 구매 클릭 → 롭스텐 테스트 포시트 클릭
 
-    ![Untitled1.png](../image/masteringethereum/Untitled%201.png)
+    ![Untitled1.png](masteringethereum/Untitled%201.png)
 
     - 웹 페이지에 이미 메타마스크 지갑의 이더리움 주소가 있다.
         - 메타마스크는 이더리움 사용 웹 페이지를 메타마스크 지갑과 통합하고 웹 페이지에서 이더리움 주소를 볼 수 있다.
@@ -106,11 +106,11 @@
 - 1 이더 요청 버튼 클릭: 트랜잭션 ID 가 페이지 하단에 나타난다.
     - Faucet 앱이 트랜잭션을 생성하여 지급한다.
 
-    ![Untitled2.png](../image/masteringethereum/Untitled%202.png)
+    ![Untitled2.png](masteringethereum/Untitled%202.png)
 
     - 블록 탐색기: 메타마스크는 이더스캔 블록 탐색기를 사용한다.
 
-        ![Untitled3.png](../image/masteringethereum/Untitled%203.png)
+        ![Untitled3.png](masteringethereum/Untitled%203.png)
 
 - 트랜잭션은 롭스텐 블록체인에 기록되며, 트랜잭션 ID 를 검색하여 누구든지 언제든 볼 수 있다.
 
@@ -124,7 +124,7 @@
 - 1 ether 클릭: 메타마스크에게 Faucet 으로 1 이더를 지급하는 트랜잭션을 생성하도록 지시한다.
 - 가스 비용 때문에 보낼 수 없다: 트랜잭션을 보낼 때 메타마스크는 최근의 성공적인 트랜잭션의 평균 가스 비용을 계산해 본 결과로 계산한다.
 
-    ![Untitled4.png](../image/masteringethereum/Untitled%204.png)
+    ![Untitled4.png](masteringethereum/Untitled%204.png)
 
     - 이더 트랜잭션은 모든 트랜잭션이 유효한지 확인하기 위해 채굴자에게 수수료를 지급해야 한다.
     - 이더리움의 수수료는 가스라는 암호화폐로 청구된다.
@@ -139,7 +139,7 @@
 
 - 이더리움 주소의 전체 트랜잭션 내역을 볼 수 있다.
 
-    ![Untitled5.png](../image/masteringethereum/Untitled%205.png)
+    ![Untitled5.png](masteringethereum/Untitled%205.png)
 
 
 ## 5. 월드 컴퓨터 소개
@@ -264,7 +264,7 @@
 - ganache 다운 `npm install -g ganache-cli`
 - ganache 실행 `ganache-cli --host 0.0.0.0` 및 Metamask 에 계정 연결
 
-    ![Untitled6.png](../image/masteringethereum/Untitled%206.png)
+    ![Untitled6.png](masteringethereum/Untitled%206.png)
 
     - ganache를 실행하며 생성했던 계정을 등록. 우측 상단 동그라미(계정)를 누르고 나오는 창에서 ‘계정 가져오기’를 클릭하자. 그리고 앞서 만들었던 private key를 등록해주면 된다.
     - private key
@@ -314,7 +314,7 @@
         > Final cost:          0.00383886 ETH
         ```
 
-    ![Untitled7.png](../image/masteringethereum/Untitled%207.png)
+    ![Untitled7.png](masteringethereum/Untitled%207.png)
 
 - 확인 `truffle console`
     - 1_initial_migration.js
