--- a/book/죽을_때까지_코딩하며_사는_법.md
+++ b/book/죽을_때까지_코딩하며_사는_법.md
@@ -475,7 +475,7 @@
 ---
 
 - 주 40시간 이상 근무하는 건, 회사나 개발자 양쪽이 손해를 보는 일
-  - 개발자는 자기 계빨이 힘드니까, '죽을 때까지 코딩' 하기 어려운 상황
+  - 개발자는 자기 계발이 힘드니까, '죽을 때까지 코딩' 하기 어려운 상황
   - 회사는 금전적인 손해를 본다.
     - 발전이 없는 개발자이지만, 시간이 지나면 연봉은 올려줘야 한다.
     - 어느 순간 스스로가 발전이 없다는 것을 깨달은 개발자가 이직
