--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -295,9 +295,9 @@
   - 불명확하거나 불편한 사실들, 걱정되는 사항들을 최대한 이른 시점에 문제제기 해야 한다.
   - 주어진 일정을 준수할 수 있을지에 대해 어느정도 자신감을 가지고 있는지 꾸준히 표명해야 한다.
   - 그저 실망시키지 않기 위해 말하는 '네'는 거짓말에 지나지 않는다. → 중독적이고 파괴적인 습관이다.
-  - 개발자들은 협상
-  - 상황이 정말 나빠질 때는 관리자에게 해당 이슈를 전달할 것을 요구하고,
-- 개발자들의 협상 기술
+  - 개발자들은 협상 기술을 익혀야 한다.
+    - 상황이 정말 나빠질 때는 관리자에게 해당 이슈를 전달할 것을 요구하고 그렇게 하지 않는다면 우리가 직접 그 관리자의 상사가 포함된 미팅을 소집해서 문제 상황을 공유할 것이라고 말해야 한다.
+    - 다툼을 피하지 말고 부딪혀서 어려운 결정을 내릴 수 있어야 한다.
 
 
 ### 대안 제시
