--- a/book/죽을_때까지_코딩하며_사는_법.md
+++ b/book/죽을_때까지_코딩하며_사는_법.md
@@ -534,7 +534,7 @@
 
 - 해가 뜨면 뛰어야 한다.
 - 원하는 어떤 결과를 만들어 내기 위해서 우리는 매일매일 노력해야 한다.
-- 우리의 삶은 어느 날 갑자기, 한번에 바뀌는 것이 아니라 하루 하루의 노력의 모여서 서서히 변화되어가는 것이기 때문이다.
+- 우리의 삶은 어느 날 갑자기, 한번에 바뀌는 것이 아니라 하루 하루의 노력이 모여서 서서히 변화되어가는 것이기 때문이다.
 
 ### 매일 해야 하는 연습
 
