--- a/book/죽을_때까지_코딩하며_사는_법.md
+++ b/book/죽을_때까지_코딩하며_사는_법.md
@@ -873,7 +873,7 @@
 
   → 정신 에너지를 아낀다.
 
-- 전문적인 지식 노동자라면 자기 두뇌의 정신 에너지를 아껴 스는 방법을 알고있어야 한다.
+- 전문적인 지식 노동자라면 자기 두뇌의 정신 에너지를 아껴 쓰는 방법을 알고있어야 한다.
 
 ### 운동화 신은 뇌
 
