[TIL/book] 엘라스틱서치 바이블 (1장. 엘라스틱서치 소개) update

--- a/book/엘라스틱서치_바이블/1장_엘라스틱서치_소개.md
+++ b/book/엘라스틱서치_바이블/1장_엘라스틱서치_소개.md
@@ -93,7 +93,7 @@
     - Redis: 싱글쓰레드, 트랜잭션 지원([redis transactions](https://docs.spring.io/spring-data/redis/reference/redis/transactions.html))
     - MongoDB: 트랜잭션 지원([mongoDB transaction](https://velog.io/@juhwanheo/Spring-Boot-MongoDB-Transaction))
         
-        ![Untitled](1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8B%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A1%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2%200ff3037745d64e4f9ce10842d9e6bc24/Untitled.png)
+        ![Untitled](./image/1/Untitled.png)
         
     
     <aside>
@@ -130,7 +130,7 @@
     
 - 만약 특수한 사정 때문에 이러한 제약을 지킬 수 없다면 7.10 버전 이하의 구버전을 선택하는 방법도 고려할 만하다.
 
-![1.1 엘라스틱서치 라이선스의 구조](1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8B%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A1%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2%200ff3037745d64e4f9ce10842d9e6bc24/Untitled%201.png)
+![1.1 엘라스틱서치 라이선스의 구조](./image/1/Untitled%201.png)
 
 1.1 엘라스틱서치 라이선스의 구조
 
@@ -663,7 +663,7 @@
             - 32bit 시스템(ILP32)에서 oops 는 최대 힙을 4GB (2^32)까지 사용할 수 있다.
             - 64bit 시스템(LP64)에서 oops 는 최대 힙을 18.5EB (2^64)까지 사용할 수 있다.
             
-            ![[https://brunch.co.kr/@alden/35](https://brunch.co.kr/@alden/35)](1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8B%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A1%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2%200ff3037745d64e4f9ce10842d9e6bc24/Untitled%202.png)
+            ![[https://brunch.co.kr/@alden/35](https://brunch.co.kr/@alden/35)](./image/1/Untitled%202.png)
             
             [https://brunch.co.kr/@alden/35](https://brunch.co.kr/@alden/35)
             
@@ -704,7 +704,7 @@
             
             5. 일반적으로 다른 앱과 메모리 경쟁을 하지 않는 경우에 이렇게 설정
             
-            ![Untitled](1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8B%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A1%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2%200ff3037745d64e4f9ce10842d9e6bc24/Untitled%203.png)
+            ![Untitled](./image/1/Untitled%203.png)
             
     
     <aside>
@@ -720,18 +720,18 @@
     - JVM 13 이하의 낮은 버전으로 구동하는 경우에는 엘라스틱서치가 기본값으로 G1GC를 사용하지 않는다.
         - G1GC: JVM 9 디폴트 가비지 컬렉터
             
-            ![Untitled](1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8B%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A1%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2%200ff3037745d64e4f9ce10842d9e6bc24/Untitled%204.png)
+            ![Untitled](./image/1/Untitled%204.png)
             
             - ES는 가비지 컬렉터 교체 이슈에 보수적으로 접근해 늦게 채택했다. 기본 설정으로는 JVM 14 이상으로 구동해야 G1GC를 사용한다.
             - JVM 10 이상이라면 config/jvm.options를 수정해서 G1GC를 사용하도록 할 수는 있다.
         - 참고: [JVM 구조와 Garbage Collection](https://donghyeon.dev/java/2020/03/31/%EC%9E%90%EB%B0%94%EC%9D%98-JVM-%EA%B5%AC%EC%A1%B0%EC%99%80-Garbage-Collection/)
             - JVM 5~8의 디폴트 가비지 컬렉터: [Parallel GC](https://blog.opendocs.co.kr/?p=569)
                 
-                ![Untitled](1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8B%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A1%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2%200ff3037745d64e4f9ce10842d9e6bc24/Untitled%205.png)
+                ![Untitled](./image/1/Untitled%205.png)
                 
             - JVM 17, 21 디폴트 가비지 컬렉터: [ZGC](https://d2.naver.com/helloworld/0128759)
                 
-                ![https://hub.packtpub.com/getting-started-with-z-garbage-collectorzgc-in-java-11-tutorial/](1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8B%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A1%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2%200ff3037745d64e4f9ce10842d9e6bc24/Untitled%206.png)
+                ![https://hub.packtpub.com/getting-started-with-z-garbage-collectorzgc-in-java-11-tutorial/](./image/1/Untitled%206.png)
                 
                 https://hub.packtpub.com/getting-started-with-z-garbage-collectorzgc-in-java-11-tutorial/
                 
