--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -513,7 +513,7 @@
 
 ---
 - 내가 가장 중요하게 생각하는 개발자의 자질이 무엇인지, 개발팀에 어떤 문화를 심고 싶은지 생각해보자.
-- 열정적은 소프트웨어 장인, 열정은 기술적인 역량이나 프로그래밍 언어에 대한 이해보다 더 중요한 조건이다.
+- 열정적인 소프트웨어 장인, 열정은 기술적인 역량이나 프로그래밍 언어에 대한 이해보다 더 중요한 조건이다.
 - 항상 새로운 것을 시도하고, 배우고, 지식을 공유하고, 커뮤니티 활동에 적극적인 사람을 원한다.
 - 열정 수준을 가늠할 방법
   - GitHub 계정
