--- a/book/함께_자라기.md
+++ b/book/함께_자라기.md
@@ -89,7 +89,7 @@
 - 타당성과 피드백을 높이기
     - 일하는 방식, 개발하는 방식을 바꾸면 타당성과 피드백을 어느 정도 높일 수 있다.
         - 타당성 높이기 예시: 변수를 제한하고 실험을 하면서 규칙성과 인과관계를 찾으려는 노력
-        - 피드백 높이기 예시: 동료나 상사, 고객에게서, 내가 개발하는 프로그램에서 직접 피드백을 적극적으로 구하면 된다ㅣ.
+        - 피드백 높이기 예시: 동료나 상사, 고객에게서, 내가 개발하는 프로그램에서 직접 피드백을 적극적으로 구하면 된다.
 
 ### 당신이 제자리걸음인 이유
 
@@ -149,7 +149,7 @@
 - 두 가지의 실수 문화
     - 실수 관리
         - 실수는 어떻게든 할 수밖에 없다. 대신 그 실수가 나쁜 결과로 되기 전에 일찍 발견하고 빨리 고치면 된다.
-        - 이미 결과가 난 실수에 대해서는 학습을 통해 “다음 행동할 때 이렇게 하자"는 계획을 세우기도 한다.(2차적 실수 예방)
+        - 이미 결과가 난 실수에 대해서는 학습을 통해 "다음 행동할 때 이렇게 하자"는 계획을 세우기도 한다.(2차적 실수 예방)
         - 심리적 안전감
     - 실수 관리 문화에서는 실수가 나쁜 결과를 내기 전에 빨리 회복하도록 돕고, 실수를 공개하고, 실수에 대해 서로 이야기하고 거기에서 배우는 분위기가 생긴다.
     - 회사 문화가 실수 예방보다 관리에 가까울수록 그 기업의 혁신 정도가 더 높다. 회사의 수익성이 더 높다.
@@ -198,8 +198,8 @@
 
 ---
 
-- 모든 항목에 “예"라고 답하는 것이 무조건 더 낫다고 동의하기 어렵다
-    - 서로 같은 목표로 일을 하는 ‘팀'이 만드는 소음은 그들 사이에서는 더 이상 소음이 아니라고 한다 → 협력에서 면대면 의사소통의 중요성
+- 모든 항목에 "예"라고 답하는 것이 무조건 더 낫다고 동의하기 어렵다
+    - 서로 같은 목표로 일을 하는 '팀'이 만드는 소음은 그들 사이에서는 더 이상 소음이 아니라고 한다 → 협력에서 면대면 의사소통의 중요성
 - 12가지 질문이 개발팀 평가에서 정말 중요한 요소인가?
     - 소프트웨어 개발을 잘 관리하려면 세 가지 근본적 능력
         - 복잡한 상황을 이해하는 능력
@@ -236,7 +236,7 @@
     - 각자 여러 개의 디자인을 만들고 그걸 모두 공유한 경우, 신뢰가 유의미하게 증가한다.
     - 하나 공유, 최고 공유 방식은 하고 나면 신뢰가 더 떨어진다 → 안 하느니만 못하다
 - 복수 공유의 장점
-    - 복수 공유는 (같은 시간을 투자했을 때) 신뢰도 높아지고 성과도 더 좋았따.
+    - 복수 공유는 (같은 시간을 투자했을 때) 신뢰도 높아지고 성과도 더 좋았다.
     - 복수 개 아이디어를 프로토타이핑 하고 공유했을 경우 팀의 결속이 강화되고 오너십을 느낀다.
 
 ### 객관성의 주관성
@@ -248,7 +248,7 @@
     - 상대방에 대해 얼마나 이해를 하고 계신가요? 얼마나 대화를 해보셨나요?
     - 별로 이야기 못 해봤습니다 → 앞으로도 설득에 성공할 확률은 낮다.
 - 품질은 상대적이다
-    - 고품질을 얻으려고 노력하는 사람들은 ‘인간'에 대한 이해가 필수적이다.
+    - 고품질을 얻으려고 노력하는 사람들은 '인간'에 대한 이해가 필수적이다.
     - 사람들은 설득을 하기 위해 객관성이 필요하다고 생각한다 → 객관의 개념 자체가 매우 주관적이다.
     - 결국 결정하는 것은 사람이다.
         - 그 사람 마음에 드냐 안 드냐, 이거다. 안 들면 어떤 이유를 들어서든 반대하게 된다.
@@ -265,7 +265,7 @@
     - MBTI 에서 NT(이성적 판단을 하고 큰 그림을 그림), NF(사람들과의 관계에 관심이 많음), SJ(구체적이며 체계적임), SP(모험을 좋아하고 닥친 문제를 푸는 것을 즐김)
         - NT(직관적 사고형): 애자일을 하면 낮은 의존성과 높은 응집성의 이상적이고 우아한 설계를 실제로 실현하고, 또 지속적으로 유지할 수 있습니다. 이제 스파게티 코드는 안녕입니다.
         - NF(직관적 감성형): 고객과 우호적 관계를 이어갈 수 있습니다. 팀원들 모두가 신뢰하고 협력하면서 즐겁게 일할 수 있습니다. 누군가를 비난하거나 하는 일이 없을 겁니다. 개인적인 성장도 가능합니다.
-        - SJ(감각적 판단형): 효율적입니다. 낭비되는 작업을 하지 않습니다. 불필요한 문서화나 회의 안 합니다. 현 프로젝트 상황이 한눈에 들어오고, 지금 당장 뭘해야 할지가 명황하게 보이게 됩니다. 더 안전합니다. 데드라인에 와서 ‘죄송합니다’ 라고 말하는 상황 절대 나오지 않고, 정확한 예측이 점점 가능해집니다.
+        - SJ(감각적 판단형): 효율적입니다. 낭비되는 작업을 하지 않습니다. 불필요한 문서화나 회의 안 합니다. 현 프로젝트 상황이 한눈에 들어오고, 지금 당장 뭘해야 할지가 명확하게 보이게 됩니다. 더 안전합니다. 데드라인에 와서 ‘죄송합니다’ 라고 말하는 상황 절대 나오지 않고, 정확한 예측이 점점 가능해집니다.
         - SP(감각적 지각형): 설계한다고 몇 달씩 시간 끌지 않습니다. 당장 개발로 들어갈 수 있습니다. 순식간에 원하는 대로 코드를 바꾸고 테스트를 통과하고 하는 짜릿짜릿한 경험을 할 수 있습니다. 테스트가 실패하면 그 원인이 되는 버그를 찾아서 고치는 것이 마치 게임 같습니다. 재미있는 툴들을 많이 접할 수 있습니다.
 
 ### 이것도 모르세요?
@@ -276,7 +276,7 @@
     - 공감하면서 들어주려고 했고, 또 중요한 것은 상대가 어떤 멘탈 모델을 갖고 있는지 파악하려고 했다.
     - 좀 더 정확하고 효과적인 제안을 해줄 수 있다.
     - 이 방법은 누가 물어볼 때뿐만 아니라 누가 실수나 잘못을 했을 때에도 매우 효과적으로 도움을 줄 수 있다.
-        - (코칭/멘토링) 능력이 없는 팀장일수록 ‘비난'만 한다.
+        - (코칭/멘토링) 능력이 없는 팀장일수록 '비난'만 한다.
     - 훌륭한 팀장이라면 먼저 그 사람의 사고 과정과 전략을 이해하려고 한다.
     - 전문가는 상황 파악을 먼저 하지만 초보자는 뭘 할지부터 정하려고 한다는 차이
 - 행동을 유도하는 대화
@@ -322,7 +322,7 @@
 ---
 
 - 뛰어난 팀의 특징 3가지
-    - 팀에 누가 있는지(전문가, 내향/외향. 지능 등)보다
+    - 팀에 누가 있는지(전문가, 내향/외향, 지능 등)보다
         - 팀원들이 서로 어떻게 상호작용하고 자신의 일을 어떻게 바라보는지가 훨씬 중요했다.
     - 5가지 성공적 팀의 특징을 찾았는데, 그중 압도적으로 높은 예측력을 보인 변수는
         - 팀의 심리적 안전감이었다.
