[TIL/lecture] image 디렉토리 리팩토링

--- a/lecture/tdd_cleancode_2021/1_과정소개,_기타자료.md
+++ b/lecture/tdd_cleancode_2021/1_과정소개,_기타자료.md
@@ -17,7 +17,7 @@
 
 - 나쁜 코드가 쌓일수록 팀 생산성은 떨어진다.
 
-    ![Untitled.png](../image/tddcleancode2021/Untitled.png)
+    ![Untitled.png](image/Untitled.png)
 
 - 우리 모두는 쓰레기 코드를 보며 나중에 손보겠다고 생각한다.
 
