--- a/lecture/스프링_MVC_1편/2_서블릿.md
+++ b/lecture/스프링_MVC_1편/2_서블릿.md
@@ -102,17 +102,17 @@
 
 - 내장 톰캣 서버 생성
 
-    ![Untitled.png](../image/sprimgmvc1/2/Untitled.png)
+    ![Untitled.png](image/2/Untitled.png)
 
     - 스프링 부트가 실행되면서 내장 톰캣 서버를 실행시켜 준다.
     - 내장 톰캣 서버는 서블릿 컨테이너를 가지고 있고, 이를 통해서 서블릿들을 다 생성해준다.
 - HTTP 요청, HTTP 응답 메시지
 
-    ![Untitled1.png](../image/sprimgmvc1/2/Untitled%201.png)
+    ![Untitled1.png](image/2/Untitled%201.png)
 
 - 웹 애플리케이션 서버의 요청 응답 구조
   
-    ![Untitled2.png](../image/sprimgmvc1/2/Untitled%202.png)
+    ![Untitled2.png](image/2/Untitled%202.png)
 
 - HTTP 응답에서 Content-Length는 웹 애플리케이션 서버가 자동으로 생성해준다.
 
@@ -410,7 +410,7 @@
     - ex> 검색, 필터, 페이징 등에서 많이 사용하는 방식
 - POST - HTML Form
 
-    ![Untitled3.png](../image/sprimgmvc1/2/Untitled%203.png)
+    ![Untitled3.png](image/2/Untitled%203.png)
 
     - content-type: `application/x-www-form-urlencoded`
     - 메시지 바디에 쿼리 파리미터 형식으로 전달 `username=hello&age=20`
